--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Printer/EditorTemplates/OtherFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Printer/EditorTemplates/OtherFieldsModel.cshtml
@@ -9,10 +9,10 @@
     <div class="row">
         <div class="span12">
             <table class="tableform">
-                @Html.EditorFor(m => m.NumberOfTrays, "NotReadonlyFields/Text")
-                @Html.EditorFor(m => m.Driver, "NotReadonlyFields/Text")
-                @Html.EditorFor(m => m.Info, "NotReadonlyFields/Text")
-                @Html.EditorFor(m => m.URL, "NotReadonlyFields/Text")
+                @Html.EditorFor(m => m.NumberOfTrays, "Fields/Text")
+                @Html.EditorFor(m => m.Driver, "Fields/Text")
+                @Html.EditorFor(m => m.Info, "Fields/Text")
+                @Html.EditorFor(m => m.URL, "Fields/Text")
             </table>
         </div>
     </div>
