--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/EditorTemplates/GeneralFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/EditorTemplates/GeneralFieldsModel.cshtml
@@ -6,15 +6,15 @@
         || Model.Model.Show
         || Model.SerialNumber.Show)
 {
-    <h4>@Translation.Get("Server")</h4>
+    <h4>@Translation.GetCoreTextTranslation("Server")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
-                @Html.EditorFor(m => m.Name, "NotReadonlyFields/Text")
-                @Html.EditorFor(m => m.Manufacturer, "NotReadonlyFields/Text")
-                @Html.EditorFor(m => m.Description, "NotReadonlyFields/Text")
-                @Html.EditorFor(m => m.Model, "NotReadonlyFields/Text")
-                @Html.EditorFor(m => m.SerialNumber, "NotReadonlyFields/Text")
+                @Html.EditorFor(m => m.Name, "Fields/Text")
+                @Html.EditorFor(m => m.Manufacturer, "Fields/Text")
+                @Html.EditorFor(m => m.Description, "Fields/Text")
+                @Html.EditorFor(m => m.Model, "Fields/Text")
+                @Html.EditorFor(m => m.SerialNumber, "Fields/Text")
             </table>
         </div>
     </div>
