--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/CommunicationFieldsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/CommunicationFieldsViewModel.cshtml
@@ -6,7 +6,7 @@
         || Model.CommunicationFieldsModel.IsRAS.Show
         || Model.CommunicationFieldsModel.NovellClient.Show)
 {
-    <h4>@Translation.Get("Kommunikation")</h4>
+    <h4>@Translation.GetCoreTextTranslation("Kommunikation")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
