--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Printer/EditorTemplates/OrganizationFieldsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Printer/EditorTemplates/OrganizationFieldsViewModel.cshtml
@@ -7,8 +7,8 @@
     <div class="row">
         <div class="span12">
             <table class="tableform">
-                @Html.EditorFor(m => m.OrganizationFieldsModel.DepartmentId, "NotReadonlyFields/List", new { Source = Model.Departments })
-                @Html.EditorFor(m => m.OrganizationFieldsModel.UnitId, "NotReadonlyFields/Text")
+                @Html.EditorFor(m => m.OrganizationFieldsModel.DepartmentId, "Fields/List", new { Source = Model.Departments })
+                @Html.EditorFor(m => m.OrganizationFieldsModel.UnitId, "Fields/Text")
             </table>
         </div>
     </div>
