--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/EditorTemplates/StorageFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/EditorTemplates/StorageFieldsModel.cshtml
@@ -2,11 +2,11 @@
 @model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Server.StorageFieldsModel
 @if (Model.Capasity.Show)
 {
-    <h4>@Translation.Get("Lagring")</h4>
+    <h4>@Translation.GetCoreTextTranslation("Lagring")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
-                @Html.EditorFor(m => m.Capasity, "NotReadonlyFields/Text")
+                @Html.EditorFor(m => m.Capasity, "Fields/Text")
             </table>
         </div>
     </div>
