--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/EditorTemplates/ChassisFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/EditorTemplates/ChassisFieldsModel.cshtml
@@ -2,11 +2,11 @@
 @model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Shared.ChassisFieldsModel
 @if (Model.Chassis.Show)
 {
-    <h4>@Translation.Get("Chassis")</h4>
+    <h4>@Translation.GetCoreTextTranslation("Chassis")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
-                @Html.EditorFor(m => m.Chassis, "NotReadonlyFields/Text")
+                @Html.EditorFor(m => m.Chassis, "Fields/Text")
             </table>
         </div>
     </div>
