--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/EditorTemplates/Fields/List.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/EditorTemplates/Fields/List.cshtml
@@ -1,10 +1,6 @@
-﻿@using DH.Helpdesk.Web.Infrastructure
-@model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Inventory.ConfigurableFieldModel<int?>
-@if (!Model.Show)
-{
-    return;
-}           
-
+﻿@using DH.Helpdesk.Web.Infrastructure.Extensions.HtmlHelperExtensions
+@using DH.Helpdesk.Web.Infrastructure
+@model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.ConfigurableFieldModel<int?>
 @{
     if (!ViewData.ContainsKey("Source"))
     {
@@ -19,17 +15,27 @@
     {
         attributes.Add("Id", ViewData["Id"]);
     }
+
+    attributes.Add("data-dh-is-required", Model.IsRequired);
+
+    var validationMessage = string.Format(" {0} {1}", Html.PureFieldCaption(Model), Translation.GetCoreTextTranslation("måste anges"));
+}
+
+@if (!Model.Show)
+{
+    return;
 }
 
 <tr>
     <td class="span3">
-        @Translation.Get(Model.Caption)
+        @Html.FieldCaption(Model)
     </td>
     <td class="span9">
         @if (!Model.IsReadOnly)
         {
             @Html.DropDownListFor(m => m.Value, source, string.Empty, attributes)
-            @Html.ValidationMessageFor(m => m.Value)
+            @Html.HiddenFor(m => m.IsRequired)
+            @Html.ValidationMessageFor(m => m.Value, validationMessage)
         }
         else
         {
