--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/EditorTemplates/InventoryFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/EditorTemplates/InventoryFieldsModel.cshtml
@@ -2,12 +2,12 @@
 @model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Shared.InventoryFieldsModel
 @if (Model.BarCode.Show)
 {
-    <h4>@Translation.Get("Inventering")</h4>
+    <h4>@Translation.GetCoreTextTranslation("Inventering")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
-                @Html.EditorFor(m => m.BarCode, "NotReadonlyFields/Text")
-                @Html.EditorFor(m => m.PurchaseDate, "NotReadonlyFields/Date", new { id = "purchasedate_datepicker" })
+                @Html.EditorFor(m => m.BarCode, "Fields/Text")
+                @Html.EditorFor(m => m.PurchaseDate, "Fields/Date", new { id = "purchasedate_datepicker" })
             </table>
         </div>
     </div>
