--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/ChassisFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/ChassisFieldsModel.cshtml
@@ -2,7 +2,7 @@
 @model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Computer.ChassisFieldsModel
 @if (Model.Chassis.Show)
 {
-    <h4>@Translation.Get("Chassis")</h4>
+    <h4>@Translation.GetCoreTextTranslation("Chassis")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
